# opentelemetry-cpp

./: .gitignore  .gitmodules  CMakeLists.txt
api/include/opentelemetry/nostd/: shared_ptr.h  string_view.h
api/include/opentelemetry/trace/: span_id.h
api/include/opentelemetry/trace/propagation/: http_trace_context.h
ci/: install_protobuf.sh  setup_gtest.sh
examples/: CMakeLists.txt  Presentation.md  README.md
examples/excalidraw/: exporter-workflow.excalidraw  history-otel.excalidraw  otel-general-pipeline.excalidraw  otel-pipeline-microsoft.excalidraw  span-context.excalidraw  span-propagator.excalidraw
examples/http/: client.cc
examples/mock_sra_workflow/: CMakeLists.txt  README.md  qm.cc  raas.cc  saas.cc  sra.cc  tracer_common.h  utilities.h
examples/mock_sra_workflow/client/: query_master_client.h  raas_client.h  saas_client.h
examples/mock_sra_workflow/protos/: messages.proto
examples/mock_sra_workflow/server/: query_master_server.h  raas_server.h  saas_server.h
examples/zipkin_bond/: CMakeLists.txt  tracer_common.h  zipkin_bond_client.cc  zipkin_bond_server.cc  zipkin_exporter_client.cc
examples/zipkin_bond/protos/: messages.proto
examples/zipkin_grpc/: CMakeLists.txt  tracer_common.h  zipkin_grpc_client.cc  zipkin_grpc_server.cc
exporters/zipkin/include/opentelemetry/exporters/zipkin/: zipkin_exporter.h
exporters/zipkin/src/: zipkin_exporter.cc
